Madagascar Flag challenge completed

--- a/C11 Flag of Madagascar/index.html
+++ b/C11 Flag of Madagascar/index.html
@@ -4,14 +4,18 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Word Carousel</title>
+        <title>Flag of Madagascar</title>
         <link rel="stylesheet" href="./style.css">
     </head>
 
     <body>
-        <div class="container">
-            <h1>I love</h1>
+        <div class="flag-madagascar">
+            <div class="white stripe"></div>
             <div>
+                <div class="red stripe"></div>
+                <div class="green stripe"></div>
+            </div>
+        </div>
 
     </body>
 
