Adjustable Progress Bar Challenge completed

--- a/C20 Adjustable Progress Bar/index.html
+++ b/C20 Adjustable Progress Bar/index.html
@@ -11,6 +11,7 @@
     <body>
         <div class="container">
             <div class="progress-bar">
+                <!-- For this Challenge: Manually Change the class from stage-1 upto stage-4 to see the Effect -->
                 <div class="prog-status stage-1"></div>
             </div>
         </div>
